src/parsing/parse_statements.c
#include "parse_statements.h"
#include "parser.h"
#include "dynamic_array.h"
#include "lexer.h"
#include "ast.h"
#include <limits.h>
#include <errno.h>
#include <math.h>
#include <stdio.h>


/* Helper: create AST node or set OOM parse error */
static AstNode *new_node_or_err(Parser *p, AstNodeType kind, ParseError *err, const char *oom_msg) {
    AstNode *n = ast_create_node(kind, p->arena, p->filename);
    if (!n) {
        if (err) create_parse_error(err, p, oom_msg, NULL);
    }
    return n;
}




static inline bool parse_int_lit(const char *s, size_t len, long long *out) {
    if (len == 0) return false;
    
    int base = 10;
    size_t start = 0;

    if (len > 2 && s[0] == '0') {
        if (s[1] == 'x' || s[1] == 'X') {
            base = 16;
            start = 2;
        } else if (s[1] == 'b' || s[1] == 'B') {
            base = 2;
            start = 2;
        }
    }

    uint64_t val = 0;
    bool any_digits = false;

    for (size_t i = start; i < len; i++) {
        if (s[i] == '_') continue; // Support underscores

        unsigned int d = 0;
        char c = s[i];
        if (c >= '0' && c <= '9') d = (unsigned int)(c - '0');
        else if (c >= 'a' && c <= 'f') d = (unsigned int)(10 + (c - 'a'));
        else if (c >= 'A' && c <= 'F') d = (unsigned int)(10 + (c - 'A'));
        else return false; // invalid char

        if (d >= (unsigned int)base) return false;

        // Check overflow
        if (val > (ULLONG_MAX - d) / (unsigned int)base) return false;

        val = val * (unsigned int)base + d;
        any_digits = true;
    }

    if (!any_digits) return false;
    if (base == 10 && val > LLONG_MAX) return false;

    *out = (long long)val;
    return true;
}




static inline bool parse_float_lit(const char *s, size_t len, double *out) {
    double val = 0.0;
    size_t i = 0;

    // integer part
    for (; i < len && s[i] >= '0' && s[i] <= '9'; i++) {
        val = val * 10.0 + (s[i] - '0');
    }

    // fractional part
    if (i < len && s[i] == '.') {
        i++;
        double frac = 0.0, base = 0.1;
        while (i < len && s[i] >= '0' && s[i] <= '9') {
            frac += (s[i] - '0') * base;
            base *= 0.1;
            i++;
        }
        val += frac;
    }

    // exponent part
    if (i < len && (s[i] == 'e' || s[i] == 'E')) {
        i++;
        int exp_sign = 1;
        if (i < len && (s[i] == '+' || s[i] == '-')) {
            if (s[i] == '-') exp_sign = -1;
            i++;
        }

        int exp_val = 0;
        while (i < len && s[i] >= '0' && s[i] <= '9') {
            exp_val = exp_val * 10 + (s[i] - '0');
            i++;
        }

        val *= pow(10.0, exp_sign * exp_val);
    }

    if (i != len) return false; // invalid chars remain

    *out = val;
    return true;
}





/* Helper: allocate + init a DynArray in arena, on error sets parse error and returns NULL */
static DynArray *alloc_dynarray(Parser *p, ParseError *err, size_t elem_size, int initial_capacity, const char *oom_msg) {
    DynArray *arr = arena_alloc(p->arena, sizeof(DynArray));
    if (!arr) {
        if (err) create_parse_error(err, p, oom_msg, NULL);
        return NULL;
    }
    dynarray_init_in_arena(arr, p->arena, elem_size, initial_capacity);
    return arr;
}

/* <Program> ::= { <Declaration> } */
AstNode *parse_program(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *program = new_node_or_err(p, AST_PROGRAM, err, "out of memory creating program node");
    if (!program) return NULL;

    program->data.program.decls = alloc_dynarray(p, err, sizeof(AstNode*), 8, "out of memory creating program decls");
    if (!program->data.program.decls) return NULL;

    /* Parse a sequence of declarations. Keep track of overall span. */
    Span first_span = {0}, last_span = {0};
    bool have_any = false;

    for (;;) {
        /* If there's an error already recorded, stop parsing.
           parse_declaration sets err on failure. */
        if (err && err->message) return NULL;

        AstNode *decl = parse_declaration(p, err);
        if (!decl) break; /* no (more) declarations or parse error produced */

        if (dynarray_push_value(program->data.program.decls, &decl) != 0) {
            if (err) create_parse_error(err, p, "out of memory adding declaration to program", NULL);
            return NULL;
        }

        if (!have_any) {
            first_span = decl->span;
            have_any = true;
        }
        last_span = decl->span;
    }

    /* If parse_declaration produced an error earlier, we've already returned. Now check for trailing tokens. */
    if (p->current < p->end) {
        if (err && !err->message) { /* Only create error if there isn't one already */
            Token *t = current_token(p);
            create_parse_error(err, p, "trailing tokens after program end", t);
        }
        return NULL;
    }

    if (have_any) program->span = span_join(&first_span, &last_span);
    else if (p->tokens && p->tokens->count > 0) {
        Token *first = (Token*)dynarray_get(p->tokens, 0);
        program->span = first->span;
    } else {
        program->span = (Span){0,0,0,0};
    }

    return program;
}

AstNode *parse_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;

    InternResult *link_name = NULL;
    if (current_token(p) && current_token(p)->type == TOK_AT) {
        consume(p, TOK_AT);
        Token *attr_name = consume(p, TOK_IDENTIFIER);
        if (attr_name) {
            if (attr_name->slice.len == 4 && memcmp(attr_name->slice.ptr, "link", 4) == 0) {
                if (!consume(p, TOK_LPAREN)) {
                    if (err) create_parse_error(err, p, "expected '(' after @link", current_token(p));
                    return NULL;
                }
                Token *name_lit = consume(p, TOK_STRING_LIT);
                if (!name_lit) {
                    if (err) create_parse_error(err, p, "expected string literal in @link", current_token(p));
                    return NULL;
                }
                link_name = name_lit->record;
                if (!consume(p, TOK_RPAREN)) {
                    if (err) create_parse_error(err, p, "expected ')' after @link name", current_token(p));
                    return NULL;
                }
            } else {
                if (err) create_parse_error(err, p, "unknown attribute", attr_name);
                return NULL;
            }
        }
    }

    bool is_pub = (parser_match(p, TOK_PUB) != 0);

    Token *current = current_token(p);
    if (!current) {
        if (err) create_parse_error(err, p, "Unexpected end of input", NULL);
        return NULL;
    }

    if (current->type == TOK_EOF) {
        /* consume EOF to leave parser in a consistent state */
        consume(p, TOK_EOF);
        return NULL;
    }

    AstNode *decl = NULL;
    switch (current->type) {
        case TOK_IMPORT:
            if (is_pub) {
                if (err) create_parse_error(err, p, "public imports are not supported", current);
                return NULL;
            }
            decl = parse_import_declaration(p, err);
            return decl;
        case TOK_FN: 
            decl = parse_function_declaration(p, err); 
            if (decl) {
                decl->data.function_declaration.is_pub = is_pub;
                decl->data.function_declaration.link_name = link_name;
            }
            return decl;
        case TOK_STRUCT: 
            decl = parse_struct_declaration(p, err); 
            if (decl) {
                decl->data.struct_declaration.is_pub = is_pub;
                if (link_name) {
                    if (err) create_parse_error(err, p, "@link attribute not supported for structs", current);
                }
            }
            return decl;
        case TOK_CONST:
        case TOK_IDENTIFIER: 
            decl = parse_declaration_stmt(p, err); 
            if (decl) {
                decl->data.variable_declaration.is_pub = is_pub;
                if (link_name) {
                    if (err) create_parse_error(err, p, "@link attribute not supported for variables", current);
                }
            }
            return decl;
        default:
            if (err) create_parse_error(err, p, "expected function, struct or variable declaration", current);
            return NULL;
    }
}

/* operand_parser: parse one operand/sublevel and return AST node (or NULL on error). */
typedef AstNode *(*operand_parser_fn)(Parser *p, ParseError *err);

typedef OpKind (*map_token_to_op_fn)(Token *tok);

AstNode *parse_import_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;
    Token *import_tok = consume(p, TOK_IMPORT);
    if (!import_tok) return NULL;

    AstNode *decl = new_node_or_err(p, AST_IMPORT_DECLARATION, err, "out of memory creating import declaration node");
    if (!decl) return NULL;

    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) {
        if (err) create_parse_error(err, p, "expected module name after 'import'", current_token(p));
        return NULL;
    }
    decl->data.import_declaration.module_name = name_tok->record;

    Token *semi = consume(p, TOK_SEMICOLON);
    if (!semi) {
        if (err) create_parse_error(err, p, "expected ';' after import declaration", current_token(p));
        return NULL;
    }

    decl->span = span_join(&import_tok->span, &semi->span);
    return decl;
}

AstNode *parse_struct_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;
    Token *struct_kw = consume(p, TOK_STRUCT);
    if (!struct_kw) return NULL; // Should not happen if called from parse_declaration
    
    AstNode *decl = new_node_or_err(p, AST_STRUCT_DECLARATION, err, "out of memory creating struct declaration node");
    if (!decl) return NULL;

    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) {
        if (err) create_parse_error(err, p, "expected identifier after 'struct'", current_token(p));
        return NULL;
    }
    decl->data.struct_declaration.intern_result = name_tok->record;
    
    decl->data.struct_declaration.fields = arena_alloc(p->arena, sizeof(DynArray));
    if (!decl->data.struct_declaration.fields) {
        if (err) create_parse_error(err, p, "out of memory allocating struct fields array", current_token(p));
        return NULL;
    }
    dynarray_init_in_arena(decl->data.struct_declaration.fields, p->arena, sizeof(AstFieldDecl), 8);

    if (!consume(p, TOK_LBRACE)) {
        if (err) create_parse_error(err, p, "expected '{' starting struct body", current_token(p));
        return NULL;
    }

    Token *current = current_token(p);
    while (current && current->type != TOK_RBRACE && current->type != TOK_EOF) {
        AstFieldDecl field = {0};
        Token *field_name = consume(p, TOK_IDENTIFIER);
        if (!field_name) {
            if (err) create_parse_error(err, p, "expected field name identifier", current_token(p));
            return NULL;
        }
        field.name = field_name->record;

        if (!consume(p, TOK_COLON)) {
            if (err) create_parse_error(err, p, "expected ':' after field name", current_token(p));
            return NULL;
        }

        AstNode *type = parse_type(p, err);
        if (!type) return NULL;
        field.type = type;

        if (!consume(p, TOK_SEMICOLON)) {
            if (err) create_parse_error(err, p, "expected ';' after field type", current_token(p));
            return NULL;
        }

        dynarray_push_value(decl->data.struct_declaration.fields, &field);
        current = current_token(p);
    }

    Token *rbrace = consume(p, TOK_RBRACE);
    if (!rbrace) {
        if (err) create_parse_error(err, p, "expected '}' closing struct body", current_token(p));
        return NULL;
    }

    decl->span = span_join(&struct_kw->span, &rbrace->span);
    return decl;
}

AstNode *parse_declaration_stmt(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *declaration = parse_variable_declaration(p, err);
    if (!declaration) return NULL;

    Token *semi = consume(p, TOK_SEMICOLON);
    if (!semi) {
        if (err) {err->use_prev_token = true; create_parse_error(err, p, "expected ';' after variable declaration", current_token(p));}
        return NULL;
    }

    declaration->span = span_join(&declaration->span, &semi->span);
    return declaration;
}

AstNode *parse_variable_declaration(Parser *p, ParseError *err) {
    if (!p) return NULL;

    AstNode *declaration = new_node_or_err(p, AST_VARIABLE_DECLARATION, err, "out of memory creating variable declaration node");
    if (!declaration) return NULL;

    Token *tok = current_token(p);
    if (!tok) {
        if (err) create_parse_error(err, p, "unexpected end of input in variable declaration", NULL);
        return NULL;
    }

    /* optional 'const' */
    if (tok->type == TOK_CONST) {
        Token *const_tok = consume(p, TOK_CONST);
        declaration->data.variable_declaration.is_const = 1;
        declaration->span = const_tok->span;
    } else {
        declaration->span = (Span){0,0,0,0};
    }

    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) {
        if (err) create_parse_error(err, p, "expected identifier in variable declaration", current_token(p));
        return NULL;
    }
    declaration->data.variable_declaration.intern_result = name_tok->record;

    /* ensure span covers the identifier (and 'const' if present) */
    if (declaration->span.start_line == 0) declaration->span = name_tok->span;
    else declaration->span = span_join(&declaration->span, &name_tok->span);

    if (!consume(p, TOK_COLON)) {
        if (err) create_parse_error(err, p, "expected ':' after variable name", current_token(p));
        return NULL;
    }

    AstNode *type = parse_type(p, err);
    if (!type) return NULL; /* parse_type produced an error */
    declaration->data.variable_declaration.type = type;

    /* optional initializer */
    AstNode *initializer = NULL;
    
    // parser_match consumes the token, so we should NOT call consume() again
    if (parser_match(p, TOK_ASSIGN)) {
        // Token *assign_tok = consume(p, TOK_ASSIGN); // REMOVED (Double consume bug)

        Token *token = current_token(p);
        if (token && token->type == TOK_LBRACE) {
            initializer = parse_initializer_list(p, err);
        } else {
            initializer = parse_expression(p, err);
        }
        if (!initializer) return NULL;
        declaration->span = span_join(&declaration->span, &initializer->span);
    } else {
        declaration->span = span_join(&declaration->span, &type->span);
    }

    declaration->data.variable_declaration.initializer = initializer;
    return declaration;
}

// <FunctionDeclaration> ::= FN IDENTIFIER LPAREN [ <ParamList> ] RPAREN [ ARROW <Type> ] <Block>
AstNode *parse_function_declaration(Parser *p, ParseError *err) {
    AstNode *func_decl = ast_create_node(AST_FUNCTION_DECLARATION, p->arena, p->filename);
    if (!func_decl) {
        if (err) create_parse_error(err, p, "out of memory creating function declaration node", NULL);  
        return NULL;
    }
    func_decl->data.function_declaration.params = arena_alloc(p->arena, sizeof(DynArray));
    if (!func_decl->data.function_declaration.params) {
        if (err) create_parse_error(err, p, "out of memory creating function params", NULL);
        return NULL;
    }
    dynarray_init_in_arena(func_decl->data.function_declaration.params, p->arena, sizeof(AstNode*), 4);

    /* fn */
    Token *fn_tok = consume(p, TOK_FN);
    if (!fn_tok) { create_parse_error(err, p, "expected 'fn' keyword at start of function declaration", current_token(p)); return NULL; }
    
    /* Initialize span with the fn token */
    func_decl->span = fn_tok->span;

    /* name */
    Token *name_tok = consume(p, TOK_IDENTIFIER);
    if (!name_tok) { create_parse_error(err, p, "expected function name", current_token(p)); return NULL; }
    func_decl->data.function_declaration.intern_result = name_tok->record;

    /* parameters */
    if (!consume(p, TOK_LPAREN)) { create_parse_error(err, p, "expected '(' after function name", current_token(p)); return NULL; }
    
    // parse parameters
    if (!parse_parameter_list(p, func_decl, err)) {
        return NULL; // parse_parameter_list already freed func_decl via fail_with
    }

    if (!consume(p, TOK_RPAREN)) { create_parse_error(err, p, "expected ')' after function parameters", current_token(p)); return NULL; }

    /* optional return type */
    Token *arrow_tok = current_token(p);
    if (arrow_tok && arrow_tok->type == TOK_ARROW) {
        consume(p, TOK_ARROW);
        AstNode *return_type = parse_type(p, err);
        if (!return_type) { return NULL; }
        func_decl->data.function_declaration.return_type = return_type;
    } else {
        func_decl->data.function_declaration.return_type = NULL; // no return type
    }

    /* body or semicolon */
    Token *tok = current_token(p);
    if (tok && tok->type == TOK_SEMICOLON) {
        consume(p, TOK_SEMICOLON);
        func_decl->data.function_declaration.body = NULL;
        func_decl->span = span_join(&func_decl->span, &tok->span);
    } else {
        func_decl->data.function_declaration.body = parse_block(p, err);
        if (!func_decl->data.function_declaration.body) return NULL; /* parse_block produced an error */
        
        /* Update span to include the entire function from fn token to end of body */
        func_decl->span = span_join(&func_decl->span, &func_decl->data.function_declaration.body->span);
    }
    
    return func_decl;
}

/* <Type> ::= { <PointerPrefix> } <TypeAtom> { <ArraySuffix> } { <PointerSuffix> } */
AstNode *parse_type(Parser *p, ParseError *err) {
    if (!p) return NULL;

    /* pointer prefixes (e.g. *i32) */
    DynArray *prefix_ptrs = alloc_dynarray(p, err, sizeof(Token), 4, "out of memory for pointer prefixes");
    if (!prefix_ptrs) return NULL;

    Token *token = current_token(p);
    while (token && token->type == TOK_STAR) {
        Token *star = consume(p, TOK_STAR);
        dynarray_push_value(prefix_ptrs, star);
        token = current_token(p);
    }

    AstNode *base = parse_type_atom(p, err);
    if (!base) return NULL;

    /* Apply prefix pointers (Right-to-Left) */
    for (size_t i = prefix_ptrs->count; i > 0; i--) {
        Token *star = (Token*)dynarray_get(prefix_ptrs, i - 1);
        AstNode *ptr_type = new_node_or_err(p, AST_TYPE, err, "out of memory creating pointer type node");
        if (!ptr_type) return NULL;

        ptr_type->data.ast_type.kind = AST_TYPE_PTR;
        ptr_type->data.ast_type.u.ptr.target = base;
        ptr_type->data.ast_type.span = span_join(&star->span, &base->span);

        base = ptr_type;
    }

    token = current_token(p);

    /* arrays: [ <const-expr>? ] */
    /* Parse dimensions into a list, then wrap REVERSELY (Right-to-Left) */
    DynArray *dims = alloc_dynarray(p, err, sizeof(AstNode*), 4, "out of memory for array dimensions");
    if (!dims) return NULL;


    while (token && token->type == TOK_LBRACKET) {
        Token *lbr = consume(p, TOK_LBRACKET);
        if (!lbr) { if (err) create_parse_error(err, p, "expected '['", current_token(p)); return NULL; }

        AstNode *size_expr = NULL;
        Token *peek_tok = current_token(p);
        if (peek_tok && peek_tok->type != TOK_RBRACKET) {
            size_expr = parse_expression(p, err);
            if (!size_expr && err && err->message) return NULL;
        }

        Token *rbr = consume(p, TOK_RBRACKET);
        if (!rbr) { if (err) err->use_prev_token = true; create_parse_error(err, p, "expected ']'", current_token(p)); return NULL; }

        // We create the array node here to capture the span and size, but don't set 'elem' yet
        AstNode *array_type = new_node_or_err(p, AST_TYPE, err, "out of memory");
        if (!array_type) return NULL;

        array_type->data.ast_type.kind = AST_TYPE_ARRAY;
        array_type->data.ast_type.u.array.size_expr = size_expr;
        array_type->data.ast_type.u.array.elem = NULL; // Set later
        // Temporary span covering just the brackets/size
        array_type->span = span_join(&lbr->span, &rbr->span); 

        if (dynarray_push_value(dims, &array_type) != 0) {
             if (err) create_parse_error(err, p, "out of memory pushing array dim", NULL);
             return NULL;
        }
        token = current_token(p);
    }

    /* Apply dimensions Backwards (Right-to-Left) */
    for (size_t i = dims->count; i > 0; i--) {
        AstNode *dim_node = *(AstNode**)dynarray_get(dims, i - 1);
        dim_node->data.ast_type.u.array.elem = base;
        // Extend span to cover the base it wraps
        dim_node->span = span_join(&base->span, &dim_node->span);
        base = dim_node;
    }

    token = current_token(p);

    /* pointer suffixes again (if any) */
    while (token && token->type == TOK_STAR) {
        Token *star = consume(p, TOK_STAR);
        if (!star) { if (err) create_parse_error(err, p, "expected '*'", current_token(p)); return NULL; }

        AstNode *ptr_type = new_node_or_err(p, AST_TYPE, err, "out of memory creating pointer type node");
        if (!ptr_type) return NULL;
        ptr_type->data.ast_type.kind = AST_TYPE_PTR;
        ptr_type->data.ast_type.u.ptr.target = base;
        ptr_type->data.ast_type.span = span_join(&base->span, &star->span);
        base = ptr_type;
        token = current_token(p);
    }

    return base;
}

/* <TypeAtom> ::= <BaseType> | LPAREN <Type> RPAREN | <FunctionType> */
AstNode *parse_type_atom(Parser *p, ParseError *err) {
    if (!p) return NULL;

    Token *tok = current_token(p);
    if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input in type", NULL); return NULL; }

    if (tok->type == TOK_LPAREN) {
        Token *lpar = consume(p, TOK_LPAREN);
        AstNode *inner = parse_type(p, err);
        if (!inner) return NULL;
        Token *rparen = consume(p, TOK_RPAREN);
        if (!rparen) { if (err) create_parse_error(err, p, "expected ')' after type", current_token(p)); return NULL; }
        inner->span = span_join(&lpar->span, &rparen->span);
        return inner;
    }

    if (tok->type == TOK_FN) {
        AstNode *func_type = parse_function_type(p, err);
        if (!func_type) return NULL;
        return func_type;
    }

    InternResult *base_type = get_base_type(p, err);
    if (!base_type) return NULL;

    AstNode *type_node = new_node_or_err(p, AST_TYPE, err, "out of memory creating type node");
    if (!type_node) return NULL;

    if (tok->type == TOK_IDENTIFIER) {
        type_node->data.ast_type.kind = AST_TYPE_PRIMITIVE; // Note: Current AST structure uses AST_TYPE_PRIMITIVE for identifiers as well (as seen in AST dump), Sema resolves them.
    } else {
        type_node->data.ast_type.kind = AST_TYPE_PRIMITIVE;
    }
    type_node->data.ast_type.span = tok->span;
    type_node->data.ast_type.u.base.intern_result = base_type;
    return type_node;
}


InternResult *get_base_type(Parser *p, ParseError *err) {
    if (!p) return NULL;
    Token *tok = current_token(p);
    if (!tok) { if (err) create_parse_error(err, p, "unexpected end of input while looking for base type", NULL); return NULL; }

    /* base types are contiguous in token enum between TOK_I32 and TOK_VOID, plus identifiers for structs */
    /* Exclude TOK_STRUCT as it is not a base type by itself */
    if (((tok->type >= TOK_I32 && tok->type <= TOK_VOID) && tok->type != TOK_STRUCT) || tok->type == TOK_IDENTIFIER) {
        consume(p, tok->type);
        return tok->record;
    }

    if (err) create_parse_error(err, p, "expected base type", tok);
    return NULL;
}

/* <FunctionType> ::= FN LPAREN [ <TypeList> ] RPAREN [ ARROW <Type> ] */
AstNode *parse_function_type(Parser *p, ParseError *err) {
    if (!p) return NULL;

    Token *fn_tok = consume(p, TOK_FN);
    if (!fn_tok) { if (err) create_parse_error(err, p, "expected 'fn' keyword", current_token(p)); return NULL; }

    AstNode *type_node = new_node_or_err(p, AST_TYPE, err, "out of memory creating function type node");
    if (!type_node) return NULL;

    type_node->data.ast_type.kind = AST_TYPE_FUNC;
    type_node->data.ast_type.span = fn_tok->span;

    Token *lparen = consume(p, TOK_LPAREN);
    if (!lparen) { if (err) create_parse_error(err, p, "expected '(' after 'fn type'", current_token(p)); return NULL; }

    Token *maybe = current_token(p);
    if (maybe && maybe->type == TOK_RPAREN) {
        Token *r = consume(p, TOK_RPAREN);
        type_node->data.ast_type.u.func.param_types = NULL;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &r->span);
    } else {
        DynArray *params = alloc_dynarray(p, err, sizeof(AstNode*), 4, "out of memory creating param types array");
        if (!params) return NULL;

        AstNode *param = parse_type(p, err);
        if (!param) return NULL;
        if (dynarray_push_value(params, &param) != 0) { if (err) create_parse_error(err, p, "out of memory adding param type", NULL); return NULL; }

        Token *sep = current_token(p);
        while (sep && sep->type == TOK_COMMA) {
            consume(p, TOK_COMMA);
            param = parse_type(p, err);
            if (!param) return NULL;
            if (dynarray_push_value(params, &param) != 0) { if (err) create_parse_error(err, p, "out of memory adding param type", NULL); return NULL; }
            sep = current_token(p);
        }

        Token *rparen = consume(p, TOK_RPAREN);
        if (!rparen) { if (err) create_parse_error(err, p, "expected ')' after function parameter types", current_token(p)); return NULL; }

        type_node->data.ast_type.u.func.param_types = params;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &rparen->span);
    }

    /* optional return type */
    Token *arrow = current_token(p);
    if (arrow && arrow->type == TOK_ARROW) {
        consume(p, TOK_ARROW);
        AstNode *ret = parse_type(p, err);
        if (!ret) return NULL;
        type_node->data.ast_type.u.func.return_type = ret;
        type_node->data.ast_type.span = span_join(&type_node->data.ast_type.span, &ret->span);
    } else {
        /* already ensured closing paren covered span above */
        type_node->data.ast_type.u.func.return_type = NULL;
    }

    return type_node;
}

/* Generic left-associative binary parser */
static AstNode *parse_left_assoc_binary(Parser *p, ParseError *err,
                        operand_parser_fn parse_operand,
                        map_token_to_op_fn map_op,
                        const char *oom_msg)
{
    AstNode *lhs = parse_operand(p, err);
    if (!lhs) return NULL;

    Token *token = current_token(p);
    int op;
    while (token && (op = map_op(token)) != OP_NULL) {
        /* copy operator token for span/error reporting */
        Token op_token = *token;
        consume(p, token->type);

        AstNode *rhs = parse_operand(p, err);
        if (!rhs) return NULL;

        AstNode *bin = new_node_or_err(p, AST_BINARY_EXPR, err, oom_msg);
        if (!bin) {
            if (err) create_parse_error(err, p, oom_msg, &op_token);
            return NULL;
        }

        bin->data.binary_expr.left  = lhs;
        bin->data.binary_expr.right = rhs;
        bin->data.binary_expr.op    = (OpKind)op;
        bin->span = span_join(&lhs->span, &rhs->span);

        lhs = bin;
        token = current_token(p);
    }

    return lhs;
}

AstNode *parse_expression(Parser *p, ParseError *err) {
    Token *tok = current_token(p);
    AstNode *lhs = parse_logical_or(p, err);
    if (!lhs) return NULL;

    Token *token = current_token(p);
    if (token && is_assignment_op(token->type)) {
        AstNode *assignment = parse_assignment(p, lhs, err);
        if (!assignment) return NULL;
        return assignment;
    }
    return lhs;
}



OpKind map_assignment_op(Token *tok) {
    if (!tok) return OP_NULL;
    switch (tok->type) {
        case TOK_ASSIGN: return OP_ASSIGN;
        case TOK_PLUS_EQ: return OP_PLUS_EQ;
        case TOK_MINUS_EQ: return OP_MINUS_EQ;
        case TOK_STAR_EQ: return OP_MUL_EQ;
        case TOK_SLASH_EQ: return OP_DIV_EQ;
        case TOK_PERCENT_EQ: return OP_MOD_EQ;
        default: return OP_NULL;
    }
}

AstNode* parse_assignment(Parser *p, AstNode *lhs, ParseError *err) {
    if (!p || !lhs) return NULL;
